--- a/cem/.env.example
+++ b/cem/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=CEM
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -11,14 +11,14 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=cem
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -42,6 +42,9 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
+CURRENCY_EXCHANGE_API_KEY=**
+CURRENCY_EXCHANGE_URL=***
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
