--- a/cem/.env.example
+++ b/cem/.env.example
@@ -44,7 +44,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 CURRENCY_EXCHANGE_API_KEY=**
-CURRENCY_EXCHANGE_URL=***
+CURRENCY_EXCHANGE_URL=https://openexchangerates.org/api/
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
